# cs185_final_project_llm_rl

./: README.md  pyproject.toml
cs285_llm_rl_final_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
dataset/wildchat_min4_judged_5k_v1/: manifest.json  test_gen.jsonl  test_prefs.jsonl
llm_rl_final_proj/: build_policy_submission.py  build_policy_vs_base_judge_inputs.py  build_reward_model_submission.py  config.py  eval.py  judge_candidates.py  sample.py  summarize_policy_vs_base_judgments.py  train.py
llm_rl_final_proj/data/: __init__.py  ultrafeedback.py
llm_rl_final_proj/models/: load.py  logprobs.py
llm_rl_final_proj/offline/: __init__.py  batch.py  evaluation.py  losses.py
llm_rl_final_proj/online/: __init__.py  train_rm_grpo.py  train_rm_online_pref.py  train_rm_ppo.py
llm_rl_final_proj/reward_model/: __init__.py  batch.py  eval.py  evaluation.py  train.py
llm_rl_final_proj/rl/: base.py  dr_grpo.py  grpo.py  gspo.py  reinforce.py
llm_rl_final_proj/rollout/: hf_sampler.py  rollout_buffer.py  sampler_base.py
llm_rl_final_proj/utils/: hardware.py  peft_utils.py  seed.py  torch_utils.py  wandb_utils.py
public_eval/: manifest.json  public_test_gen_base_responses_128.jsonl  public_test_gen_prompts_128.jsonl  public_test_prefs_256.jsonl
scripts/: modal_train.py
student_autograder/: README.md  common.py  requirements.txt  run_local_autograder.py  thresholds.json
