[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cs285-llm-rl-final-project"
version = "0.1.0"
description = "CS 285/185 LLM RL default final project"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "modal>=1.0.0",
]

[project.optional-dependencies]
remote = [
  "torch>=2.5,<2.7",
  "transformers>=4.45.0,<4.57.0",
  "peft>=0.13.0",
  "datasets>=2.19.0",
  "tqdm>=4.66.0",
  "wandb>=0.16.0",
  "numpy<2.0",
]

[tool.setuptools.packages.find]
include = ["llm_rl_final_proj*"]
